--- a/stencil-lib/src/styles/tailwind.css
+++ b/stencil-lib/src/styles/tailwind.css
@@ -16,8 +16,6 @@
     -moz-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box;
-
-    @apply scroll-smooth;
   }
 
   *:focus {
